--- a/figma-ui-code-project/styles/form/index.css
+++ b/figma-ui-code-project/styles/form/index.css
@@ -5,6 +5,8 @@
     column-gap: 26px;
     row-gap: 29px;
     padding: 0;
+    /* add margin-top */
+    margin-top: 40px;
 }
 
 .form-group {
@@ -41,9 +43,48 @@
     line-height: 22.4px;
     font-size: 1rem;
 }
+/* 
+.form-input.active::placeholder {
+    display: inline-block;
+    width: 70px;
+    background-color: #4da7de;
+    padding: 3px 19px 3px 10px;
+    color: var(--white-color);
+    border-radius: 5px;
+}
+
+.form-group img {
+    position: absolute;
+    top: 329px;
+    left: 357px;
+} */
+
+.form-group .selection-dropdown-box {
+    position: relative;
+}
+
+.form-group .selection-dropdown-box .dropdown-selection {
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    position: absolute;
+    display: flex;
+    /* width: 70px; */
+    background-color: #4da7de;
+    padding: 2px 10px 2px 10px;
+    color: var(--white-color);
+    border-radius: 5px;
+}
+
+.form-group .selection-dropdown-box .dropdown-selection img {
+    width: 12px;
+    height: 12px;
+    margin-top: 6px;
+    margin-left: 5px;
+}
 
 .form-btn {
-    margin-top: 42px;
+    margin: 42px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
