--- a/figma-ui-code-project/styles/detail.css
+++ b/figma-ui-code-project/styles/detail.css
@@ -34,40 +34,52 @@ section {
     font-size: var(--size-md);
 }
 
-.section-item .description-content h2 {
-}
-
-.section .description-content p {
-}
-
 .main-section {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 67px;
+    overflow: hidden;
+    margin-bottom: 35px;
+}
+
+.slider-container {
+    max-width: 996px;
+    width: 996px;
+    overflow-x: hidden;
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    width: 100%;
+
+    box-sizing: border-box;
     position: relative;
-    margin-top: 62px;
+    flex: 0 0 100%;
 }
 
-.arrow img {
-    height: auto;
+.slide .slide-img {
+    width: 100%;
+    height: 560px;
+    object-fit: none;
 }
 
-.left-arrow {
+.prev {
     position: absolute;
-    left: -120px;
-    top: 245px;
+    left: 39px;
+    top: 407px;
 }
 
-.right-arrow {
+.next {
     position: absolute;
-    right: -120px;
-    top: 245px;
+    right: 39px;
+    top: 407px;
 }
 
-.main-image-wrapper {
-    position: relative;
-    margin-bottom: 10px;
-}
 
 .main-image {
     width: 996px;
@@ -80,10 +92,9 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 165, 0, 0.8);
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 128px;
+    height: 128px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,7 +106,7 @@ section {
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000033;
-    overflow: hidden; 
+    overflow: hidden;
     margin-top: 42px;
 }
 
